--- a/firstorder/params.ini
+++ b/firstorder/params.ini
@@ -2,7 +2,7 @@
 
 
 #root for output files 
-root = test
+root = lcdm
 
 # fixed wave number  (for SolvePert); COOP uses fixed k arrays so the actual k will be the closest one in the array but not exactly the number given here.
 kMpc = 0.05
@@ -69,7 +69,7 @@ theta = 1.04085
 tau = 0.078
 
 # amplitude of scalar power spectrum
-As = 2.22e-9
+As = 2.2e-9
 #tilt of scalar power spectrum
 ns = 0.9655
 
