CMB fisher working

--- a/forecast/params_mpk.ini
+++ b/forecast/params_mpk.ini
@@ -1,12 +1,10 @@
 genre = MPK
-name = MPK_sim1
+name = MPK_EUCLIDlike
 n_obs = 2048
 
-params = ombh2 omch2 theta logA ns mpk_sigma_g mpk_b0_1 mpk_b0_2 mpk_b0_3 mpk_b0_4 mpk_b0_5 mpk_b0_6 mpk_b0_7 mpk_b0_8
+params = ombh2 omch2 theta logA ns de_w de_alpha_K0 de_alpha_M0 de_alpha_B0 de_alpha_H0 de_alpha_T0 mpk_sigma_g mpk_b0_1 mpk_b0_2 mpk_b0_3 mpk_b0_4 mpk_b0_5 mpk_b0_6 mpk_b0_7 mpk_b0_8
 
 fsky = 0.5
-
-
 
 n_z = 8
 n_k = 16
