--- a/forecast/params_fisher.ini
+++ b/forecast/params_fisher.ini
@@ -3,7 +3,7 @@ n_params = 23
 param_names = ombh2 omch2 tau theta logA ns de_w de_alpha_K0 de_alpha_M0 de_alpha_B0 de_alpha_H0 de_alpha_T0 sn_absolute_m mpk_sigma_g mpk_b0_1 mpk_b0_2 mpk_b0_3 mpk_b0_4 mpk_b0_5 mpk_b0_6 mpk_b0_7 mpk_b0_8 cmb_A_noise
 params_slow = ombh2 omch2 tau theta de_w de_alpha_K0 de_alpha_M0 de_alpha_B0 de_alpha_H0
 params_fast = logA ns
-output = fisher_alpha_M.txt
+output = fisher_alpha_all.txt
 
 param[ombh2] = 0.022 0.0003 -0.0003 0.002
 param[omch2] = 0.11  0.001 -0.001 
