fix cmb param file

--- a/forecast/params_cmb.ini
+++ b/forecast/params_cmb.ini
@@ -1,7 +1,7 @@
 genre = CMB_TE
 name = CMB_ACTlike
 n_obs = 2999
-params = ombh2 omch2 theta tau logA ns de_w _alpha_K0 de_alpha_M0 de_alpha_B0 de_alpha_H0 de_alpha_T0 cmb_A_noise
+params = ombh2 omch2 theta tau logA ns de_w de_alpha_K0 de_alpha_M0 de_alpha_B0 de_alpha_H0 de_alpha_T0 cmb_A_noise
 
 lmin = 2
 lmax = 3000
