--- a/forecast/params_mpk.ini
+++ b/forecast/params_mpk.ini
@@ -10,11 +10,14 @@ n_z = 8
 n_k = 16
 n_mu = 16
 
-z = 0.6 0.8 1. 1.2 1.4 1.6 1.8 2.
+z = 0.2 0.4 0.6 0.8 1. 1.2 1.4 1.6 
 delta_z  = 0.2 0.2 0.2 0.2 0.2 0.2 0.2 0.2 
-nobs = 3.56e-3 2.42e-3 1.81e-3 1.44e-3 0.99e-3 0.55e-3 0.29e-3 0.15e-3
-kmin = 3.3e-3 2.9e-3 2.7e-3 2.6e-3 2.5e-3 2.4e-3 2.4e-3 2.4e-3 
-kmax = 0.15 0.17 0.2 0.21 0.22 0.22 0.23 0.23
+nobs = 3.5e-3 3.5e-3 3.56e-3 2.42e-3 1.81e-3 1.44e-3 0.99e-3 0.55e-3
+# 0.29e-3 0.15e-3
+kmin = 3.e-3 3.3e-3 3.3e-3 2.9e-3 2.7e-3 2.6e-3 2.5e-3 2.4e-3 
+#2.4e-3 2.4e-3 
+kmax = 0.1 0.12 0.15 0.17 0.2 0.21 0.22 0.22 
+#0.23 0.23
 
 
 
