--- a/forecast/params_fisher.ini
+++ b/forecast/params_fisher.ini
@@ -3,44 +3,35 @@ n_params = 23
 param_names = ombh2 omch2 tau theta logA ns de_w de_alpha_K0 de_alpha_M0 de_alpha_B0 de_alpha_H0 de_alpha_T0 sn_absolute_m mpk_sigma_g mpk_b0_1 mpk_b0_2 mpk_b0_3 mpk_b0_4 mpk_b0_5 mpk_b0_6 mpk_b0_7 mpk_b0_8 cmb_A_noise
 params_slow = ombh2 omch2 tau theta de_w de_alpha_K0 de_alpha_M0 de_alpha_B0 de_alpha_H0
 params_fast = logA ns
-output = fisher_alpha_B_nocmb.txt
+output = fisher_wKMB.txt
 
-param[ombh2] = 0.022 
-#0.0003 -0.0003 0.002
-param[omch2] = 0.11 
-param[tau] = 0.07 
-param[theta] = 1.04 
-param[logA] = 3.1 
-param[ns] = 0.96  
+param[ombh2] = 0.022 0.0003 -0.0003 0.002
+param[omch2] = 0.11 0.002 -0.002
+param[tau] = 0.07 0.01 -0.01 
+param[theta] = 1.04 0.001 -0.001
+param[logA] = 3.1 0.02 -0.02
+param[ns] = 0.96  0.005 -0.005
 param[de_w] = -1. 0.02 0.04
-param[de_alpha_K0] = 0.2 
-param[de_alpha_M0] = 0. 0.1 0.2 
+param[de_alpha_K0] = 0.2 0.02 -0.02
+param[de_alpha_M0] = 0. 0.15 0.3
 param[de_alpha_B0] = 0. -0.06 -0.12 
-param[de_alpha_H0] = 0.
+param[de_alpha_H0] = 0. 
 param[de_alpha_T0] = 0. 
 param[sn_absolute_m] = 19. -0.02 0.02 0.1
 param[mpk_sigma_g] = 400.  -20. 20. 200.
-param[mpk_b0_3] = 1.053 
-#-0.02 0.02
-param[mpk_b0_4] = 1.125 
-#-0.02 0.02
-param[mpk_b0_5] = 1.126 
-#-0.02 0.02
-param[mpk_b0_6] = 1.243 
-#-0.03 0.03
-param[mpk_b0_7] = 1.292 
-#-0.03 0.03
-param[mpk_b0_8] = 1.497 
-#-0.03 0.03
-param[mpk_b0_1] = 1.05 
-#-0.02 0.02
+param[mpk_b0_3] = 1.053 -0.02 0.02
+param[mpk_b0_4] = 1.125 -0.02 0.02
+param[mpk_b0_5] = 1.126 -0.02 0.02
+param[mpk_b0_6] = 1.243 -0.03 0.03
+param[mpk_b0_7] = 1.292 -0.03 0.03
+param[mpk_b0_8] = 1.497 -0.03 0.03
+param[mpk_b0_1] = 1.05 -0.02 0.02
 #1.491 -0.03 0.03
-param[mpk_b0_2] = 1.05 
-#-0.02 0.02
+param[mpk_b0_2] = 1.05 -0.02 0.02
 #1.568 -0.04 0.04
 param[cmb_A_noise] = 1. -0.01 0.01 0.01
 
-n_observations = 2
+n_observations = 3
 observation1 = params_mpk.ini
 observation3 = params_cmb.ini
 observation2 = params_sn.ini
