--- a/forecast/Makefile
+++ b/forecast/Makefile
@@ -35,6 +35,9 @@ MCMC:	runmcmc.o $(OBJ)
 FISHER:	runfisher.o $(OBJ)
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) runfisher.o $(LINK)
 
+PLOTF:	plotfisher.o $(OBJ)
+	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) plotfisher.o $(LINK)
+
 
 STD6:	teststd6.o $(OBJ)
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) teststd6.o $(LINK) 
