change sn settings

--- a/forecast/fisher_inis/params_fisher.ini
+++ b/forecast/fisher_inis/params_fisher.ini
@@ -1,24 +1,29 @@
 #number of cosmological parameters + nuisance parameters
 n_params = 23
+#name of parameters
 param_names = ombh2 omch2 tau theta logA ns de_w de_alpha_K0 de_alpha_M0 de_alpha_B0 de_alpha_H0 de_alpha_T0 sn_absolute_m mpk_sigma_g mpk_b0_1 mpk_b0_2 mpk_b0_3 mpk_b0_4 mpk_b0_5 mpk_b0_6 mpk_b0_7 mpk_b0_8 cmb_A_noise
+#slow parameters (will change cosmological background or perturbations)
 params_slow = ombh2 omch2 tau theta de_w de_alpha_K0 de_alpha_M0 de_alpha_B0 de_alpha_H0
+#fast parameters (will chagne primordial power spectrum)
 params_fast = logA ns
-root = fisher_outputs/wBKM
+#output root; the output file will be ROOT_cov.txt, ROOT_fisher.txt and ROOT_std.txt
+root = fisher_outputs/wBKM_CMB_LSS_SN
 
+## fiducial value; trial step1; trial step2; Gaussian piror width
 param[ombh2] = 0.022 0.0003 -0.0003 0.002
-param[omch2] = 0.11 0.002 -0.002
-param[tau] = 0.07 0.01 -0.01 
+param[omch2] = 0.11 0.001 -0.001
+param[tau] = 0.07 0.005 -0.005 
 param[theta] = 1.04 0.001 -0.001
 param[logA] = 3.1 0.02 -0.02
 param[ns] = 0.96  0.005 -0.005
-param[de_w] = -1. 0.02 0.04
+param[de_w] = -1. 0.015 0.03
 param[de_alpha_K0] = 0.1 0.05 -0.05
 param[de_alpha_M0] = 0. 0.15 0.3
-param[de_alpha_B0] = 0.  -0.1 -0.2
+param[de_alpha_B0] = 0. -0.1 -0.2
 param[de_alpha_H0] = 0. 
 param[de_alpha_T0] = 0. 
-param[sn_absolute_m] = 19. -0.02 0.02 0.2
-param[mpk_sigma_g] = 400.  -20. 20. 200.
+param[sn_absolute_m] = 19. -0.02 0.02 0.1
+param[mpk_sigma_g] = 400.  -10.  10.  200.
 param[mpk_b0_1] = 1.053 -0.02 0.02
 param[mpk_b0_2] = 1.125 -0.02 0.02
 param[mpk_b0_3] = 1.126 -0.02 0.02
@@ -30,6 +35,6 @@ param[mpk_b0_8] = 1.568 -0.04 0.04
 param[cmb_A_noise] = 1. -0.01 0.01 0.01
 
 n_observations = 3
-observation1 =  fisher_inis/params_mpk.ini
-observation3 =  fisher_inis/params_cmb.ini
-observation2 =  fisher_inis/params_sn.ini
+observation1 =  fisher_inis/params_cmb.ini
+observation2 =  fisher_inis/params_mpk.ini
+observation3 =  fisher_inis/params_sn.ini
