--- a/forecast/fisher_inis/params_sn.ini
+++ b/forecast/fisher_inis/params_sn.ini
@@ -1,13 +1,22 @@
+#type Ia supernova
 genre = SN
-name = SN_sim1
-n_obs = 15
+name = SN_WFIRSTlike
+#Future WFIRST, parameters from arXiv 1503.03757
+n_obs = 17
 
-params = omch2 de_w sn_absolute_m
-
-
-z = 0.03 0.1 0.2 0.3 0.4 0.5 0.6 0.7 0.8 0.9 1. 1.1 1.2 1.3 1.4 
-n_samples = 300 200 100 100 100 100 100 100 100 100 100 80 60 40 20 
+params = ombh2 omch2 theta de_w sn_absolute_m
 
 
-sn_intrinsic_delta_mu = 0.1
+z = 0.1 0.2 0.3 0.4 0.5 0.6 0.7 0.8 0.9 1. 1.1 1.2 1.3 1.4 1.5 1.6 1.7
+n_samples =  70 210 400 225 324 136 136 136 136 136 136 136 136 136 136 136 136
+
+#photo-z measurement error
+sn_sigma_meas = 0.08
+#intrinsic uncertainty, constant
+sn_sigma_int = 0.09
+#lensing uncertainty: sigma_lens * z 
+sn_sigma_lens = 0.07
+#systematic uncertainty: sigma_sys (1+z) (per bin)
+sn_sigma_sys_per_bin = 0.0055
+#peculiar velocity:  v/c / z
 sn_peculiar_velocity = 400.
