--- a/forecast/fisher_inis/params_B.ini
+++ b/forecast/fisher_inis/params_B.ini
@@ -3,7 +3,7 @@ n_params = 23
 param_names = ombh2 omch2 tau theta logA ns de_w de_alpha_K0 de_alpha_M0 de_alpha_B0 de_alpha_H0 de_alpha_T0 sn_absolute_m mpk_sigma_g mpk_b0_1 mpk_b0_2 mpk_b0_3 mpk_b0_4 mpk_b0_5 mpk_b0_6 mpk_b0_7 mpk_b0_8 cmb_A_noise
 params_slow = ombh2 omch2 tau theta de_w de_alpha_K0 de_alpha_M0 de_alpha_B0 de_alpha_H0
 params_fast = logA ns
-root = fisher_out/wKB
+root = fisher_out/wKB_CMB_LSS_SN
 
 param[ombh2] = 0.022 
 #0.0003 -0.0003 0.002
@@ -13,7 +13,7 @@ param[theta] = 1.04
 param[logA] = 3.1 
 param[ns] = 0.96  
 param[de_w] = -1.  0.05  0.1
-param[de_alpha_K0] = 0.1 -0.03 0.03
+param[de_alpha_K0] = 0.1 
 param[de_alpha_M0] = 0. 
 param[de_alpha_B0] = 0. -0.03 -0.1
 param[de_alpha_H0] = 0.
@@ -41,7 +41,7 @@ param[mpk_b0_8] = 1.568 -0.01 0.01 0.03
 param[cmb_A_noise] = 1. 0.005 -0.005 0.01
 #-0.01 0.01 0.01
 
-n_observations = 1
+n_observations = 3
 observation1 = fisher_inis/params_mpk.ini
 observation3 = fisher_inis/params_cmb.ini
 observation2 = fisher_inis/params_sn.ini
