--- a/forecast/fisher_inis/params_cmb.ini
+++ b/forecast/fisher_inis/params_cmb.ini
@@ -1,23 +1,34 @@
+#CMB mock data
 genre = CMB_TE
 name = CMB_ACTlike
-n_obs = 2999
-params = ombh2 omch2 theta tau logA ns de_w de_alpha_K0 de_alpha_M0 de_alpha_B0 de_alpha_H0 de_alpha_T0 cmb_A_noise
+#this number should be lmax - lmin + 1
+n_obs = 3499
 
+#likelihood depends on the following parameters
+params = ombh2 omch2 theta tau logA ns de_w de_alpha_K0 de_alpha_M0 de_alpha_B0 de_alpha_H0 de_alpha_T0 cmb_A_noise
+# l cutoffs 
 lmin = 2
-lmax = 3000
+lmax = 3500
+#sky coverage for temperature data (0-1)
 fsky = 0.8
+#sky coverage for polarization data (0-1)
 fsky_pol = 0.7
+#residual of thermal dust emission (0-1)
 foreground_residual = 0.05
 
 #arXiv: 1007.0290
+#number of frequency channels
 n_channels = 2
-#in GHz
+
+#frequencies in GHz
 frequency_channel1 = 148.
 frequency_channel2 = 218.
-#in arcmin
+
+#beam FWHM in arcmin
 beam_fwhm_channel1 = 1.4
 beam_fwhm_channel2 = 1.
-#in unit muK s^{1/2}
+
+#detector sensitivity in unit muK s^{1/2}
 i_sensitivity_channel1 = 30.
 i_sensitivity_channel2 = 40.
 pol_sensitivity_channel1 = 42.
