--- a/forecast/fisher_inis/params_mpk.ini
+++ b/forecast/fisher_inis/params_mpk.ini
@@ -1,23 +1,33 @@
+#matter power spectrum
 genre = MPK
 name = MPK_EUCLIDlike
+#this number should be n_z * n_k * n_mu
 n_obs = 2048
 
+#likelihood depends on the following parameters
 params = ombh2 omch2 theta logA ns de_w de_alpha_K0 de_alpha_M0 de_alpha_B0 de_alpha_H0 de_alpha_T0 mpk_sigma_g mpk_b0_1 mpk_b0_2 mpk_b0_3 mpk_b0_4 mpk_b0_5 mpk_b0_6 mpk_b0_7 mpk_b0_8
 
+#sky coverage
 fsky = 0.4
 
+#number of z, k, mu bins; mu = cos(theta) where theta is the angle between the line of sight and the k vector.
 n_z = 8
 n_k = 16
 n_mu = 16
 
+#redshift bins
 z = 0.6 0.8 1. 1.2 1.4 1.6 1.8 2.
+#size of redshift bins
 delta_z  = 0.2 0.2 0.2 0.2 0.2 0.2 0.2 0.2 
+#effective of observed galaxies per h^{-3}Mpc^3
 nobs = 3.56e-3 2.42e-3 1.81e-3 1.44e-3 0.99e-3 0.55e-3 0.29e-3 0.15e-3
+#minimum k cutoff, unit h Mpc^{-1}
 kmin = 3.3e-3 2.9e-3 2.7e-3 2.6e-3 2.5e-3 2.4e-3 2.4e-3 2.4e-3 
+#maximum k cutoff, unit h Mpc^{-1}
 kmax = 0.15 0.17 0.2 0.21 0.22 0.22 0.23 0.23
 
 
 
 
-# uncertainty in z = sigma_z (1+z); for photo z measurements sigma_z is typically 0.03-0.05; for spectroscopic-z  sigma_z is typically ~0.001
+# uncertainty in z = sigma_z (1+z); for photo z measurements sigma_z is typically 0.03-0.05; for spectr-z  sigma_z is typically ~0.001
 sigma_z = 0.001
