change flat stacking

--- a/forecast/fisher_inis/params_fisher.ini
+++ b/forecast/fisher_inis/params_fisher.ini
@@ -17,9 +17,9 @@ param[theta] = 1.04 0.001 -0.001
 param[logA] = 3.1 0.02 -0.02
 param[ns] = 0.96  0.005 -0.005
 param[de_w] = -1. 0.015 0.03
-param[de_alpha_K0] = 0.1 0.05 -0.05
+param[de_alpha_K0] = 0.1
 param[de_alpha_M0] = 0. 0.15 0.3
-param[de_alpha_B0] = 0. -0.1 -0.2
+param[de_alpha_B0] = 0. -0.1 -0.15
 param[de_alpha_H0] = 0. 
 param[de_alpha_T0] = 0. 
 param[sn_absolute_m] = 19. -0.02 0.02 0.1
