--- a/mapio/params_coadd.ini
+++ b/mapio/params_coadd.ini
@@ -10,13 +10,13 @@ map3 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_2_8Dec
 map4 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_3_8Dec15_beams_srcsub_mapsub_wpoly_nobad_500_U.fits
 
 #weight files
-#weight1 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_0_8Dec15_beams_srcsub_mapsub_weights_I.fits
-#weight2 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_1_8Dec15_beams_srcsub_mapsub_weights_I.fits
-#weight3 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_2_8Dec15_beams_srcsub_mapsub_weights_I.fits
-#weight4 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_3_8Dec15_beams_srcsub_mapsub_weights_I.fits
+weight1 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_0_8Dec15_beams_srcsub_mapsub_weights_UU.fits
+weight2 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_1_8Dec15_beams_srcsub_mapsub_weights_UU.fits
+weight3 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_2_8Dec15_beams_srcsub_mapsub_weights_UU.fits
+weight4 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_3_8Dec15_beams_srcsub_mapsub_weights_UU.fits
 
 #output
-output_map = act16/deep56_array_2_noise_sim_1_U.fits
+output_map = act16/noise1_U.fits
 #output_weight = act16/deep56_weight_I.fits
 
 ##other settings
