--- a/forecast/fisher_inis/params_mpk.ini
+++ b/forecast/fisher_inis/params_mpk.ini
@@ -5,7 +5,7 @@ name = MPK_EUCLIDlike
 n_obs = 2048
 
 #likelihood depends on the following parameters
-params = ombh2 omch2 theta logA ns de_w de_alpha_K0 de_alpha_M0 de_alpha_B0 de_alpha_H0 de_alpha_T0 mpk_sigma_g mpk_b0_1 mpk_b0_2 mpk_b0_3 mpk_b0_4 mpk_b0_5 mpk_b0_6 mpk_b0_7 mpk_b0_8
+params = ombh2 omch2 theta logA ns nrun de_w de_alpha_K0 de_alpha_M0 de_alpha_B0 de_alpha_H0 de_alpha_T0 mpk_sigma_g mpk_b0_1 mpk_b0_2 mpk_b0_3 mpk_b0_4 mpk_b0_5 mpk_b0_6 mpk_b0_7 mpk_b0_8
 
 #sky coverage
 fsky = 0.4
