--- a/forecast/fisher_inis/params_planck.ini
+++ b/forecast/fisher_inis/params_planck.ini
@@ -1,38 +1,42 @@
 #CMB mock data
 genre = CMB_TE
-name = CMB_ACTlike
+name = CMB_PlanckLike
 #this number should be lmax - lmin + 1
-n_obs = 3499
+n_obs = 2499
 
 #likelihood depends on the following parameters
 params = ombh2 omch2 theta tau logA ns nrun de_w de_alpha_K0 de_alpha_M0 de_alpha_B0 de_alpha_H0 de_alpha_T0 cmb_A_noise
 # l cutoffs 
 lmin = 2
-lmax = 3500
+lmax = 2500
 #sky coverage for temperature data (0-1)
-fsky = 0.8
+fsky = 0.75
 #sky coverage for polarization data (0-1)
-fsky_pol = 0.7
+fsky_pol = 0.75
 #residual of thermal dust emission (0-1)
 foreground_residual = 0.05
 
 #arXiv: 1007.0290
 #number of frequency channels
-n_channels = 2
+n_channels = 3
 
 #frequencies in GHz
-frequency_channel1 = 148.
-frequency_channel2 = 218.
+frequency_channel1 = 70.
+frequency_channel2 = 100.
+frequency_channel3 = 143.
 
 #beam FWHM in arcmin
-beam_fwhm_channel1 = 1.4
-beam_fwhm_channel2 = 1.
+beam_fwhm_channel1 = 14.
+beam_fwhm_channel2 = 10.
+beam_fwhm_channel3 = 7.1
 
 #detector sensitivity in unit muK s^{1/2}
-i_sensitivity_channel1 = 30.
-i_sensitivity_channel2 = 40.
-pol_sensitivity_channel1 = 42.
-pol_sensitivity_channel2 = 56.
+i_sensitivity_channel1 = 318.
+i_sensitivity_channel2 = 121.
+i_sensitivity_channel3 = 75.2
+pol_sensitivity_channel1 = 450.
+pol_sensitivity_channel2 = 172.
+pol_sensitivity_channel3 = 106.
 
 #integration time in unit of years
-obs_yr = 3.
+obs_yr = 2.5
