--- a/forecast/fisher_inis/fisher_lcdm.ini
+++ b/forecast/fisher_inis/fisher_lcdm.ini
@@ -1,9 +1,9 @@
 #number of cosmological parameters + nuisance parameters
-n_params = 24
+n_params = 18
 #name of parameters
-param_names = ombh2 omch2 tau theta logA ns nrun de_w de_alpha_K0 de_alpha_M0 de_alpha_B0 de_alpha_H0 de_alpha_T0 sn_absolute_m mpk_sigma_g mpk_b0_1 mpk_b0_2 mpk_b0_3 mpk_b0_4 mpk_b0_5 mpk_b0_6 mpk_b0_7 mpk_b0_8 cmb_A_noise
+param_names = ombh2 omch2 tau theta logA ns nrun sn_absolute_m mpk_sigma_g mpk_b0_1 mpk_b0_2 mpk_b0_3 mpk_b0_4 mpk_b0_5 mpk_b0_6 mpk_b0_7 mpk_b0_8 cmb_A_noise
 #slow parameters (will change cosmological background or perturbations)
-params_slow = ombh2 omch2 tau theta de_w de_alpha_K0 de_alpha_M0 de_alpha_B0 de_alpha_H0
+params_slow = ombh2 omch2 tau theta 
 #fast parameters (will chagne primordial power spectrum)
 params_fast = logA ns nrun
 #output root; the output file will be ROOT_cov.txt, ROOT_fisher.txt and ROOT_std.txt
@@ -17,12 +17,6 @@ param[theta] = 1.04 0.001 -0.001
 param[logA] = 3.1 0.02 -0.02
 param[ns] = 0.96  0.005 -0.005
 param[nrun] = 0.  0.005 -0.005
-param[de_w] = -1.
-param[de_alpha_K0] = 0.
-param[de_alpha_M0] = 0.
-param[de_alpha_B0] = 0.
-param[de_alpha_H0] = 0. 
-param[de_alpha_T0] = 0. 
 param[sn_absolute_m] = 19. -0.02 0.02 0.1
 param[mpk_sigma_g] = 400.  -10.  10.  200.
 param[mpk_b0_1] = 1.053 -0.02 0.02
