--- a/mapio/params_coadd_single.ini
+++ b/mapio/params_coadd_single.ini
@@ -1,24 +1,17 @@
 #this parameter file is used by FCoadd
 
 #total number of maps
-num_maps = 1
+num_maps = 2
 
 
 #map files
-map1 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_0_8Dec15_beams_srcsub_mapsub_wpoly_nobad_500_Q.fits
-map2 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_1_8Dec15_beams_srcsub_mapsub_wpoly_nobad_500_I.fits
-map3 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_2_8Dec15_beams_srcsub_mapsub_wpoly_nobad_500_I.fits
-map4 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_3_8Dec15_beams_srcsub_mapsub_wpoly_nobad_500_I.fits
+map1 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_0_8Dec15_beams_srcsub_mapsub_sim0_500_I.fits
+map2 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_0_8Dec15_beams_srcsub_mapsub_500_I.fits
 
-#weight files
-weight1 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_0_8Dec15_beams_srcsub_mapsub_nobad_weights_QQ.fits
-weight2 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_1_8Dec15_beams_srcsub_mapsub_nobad_weights_I.fits
-weight3 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_2_8Dec15_beams_srcsub_mapsub_nobad_weights_I.fits
-weight4 = act16/deep56_array_2_season2_iqu_c7v5_night_strict_nomoon_4way_set_3_8Dec15_beams_srcsub_mapsub_nobad_weights_I.fits
 
 #output
-output_map = act16/deep56_set0_Q.fits
-output_weight = act16/set0_weight_Q.fits
+output_map = act16/simsub_set_0_I.fits
+#output_weight = act16/set0_weight_I.fits
 
 ##other settings
 
@@ -42,7 +35,7 @@ fwhm_arcmin = 0.d0
 
 #===================================================
 #regularize outliers
-reg_limit = 0.001
+reg_limit = 0
 
 #=====================================================
 #analyze each map and print simple statistics
@@ -56,7 +49,7 @@ truncate_weight = 0.3
 positive_weights = F
 
 #multiply the map by some coefficients
-#coef1 = 1.
-#coef2 = 1.
+coef1 = 2.
+coef2 = -2.
 #coef3 = 1.
 #coef4 = 1.
