--- a/forecast/fisher_inis/params_mpk.ini
+++ b/forecast/fisher_inis/params_mpk.ini
@@ -26,6 +26,18 @@ kmin = 3.3e-3 2.9e-3 2.7e-3 2.6e-3 2.5e-3 2.4e-3 2.4e-3 2.4e-3
 #maximum k cutoff, unit h Mpc^{-1}
 kmax = 0.15 0.17 0.2 0.21 0.22 0.22 0.23 0.23
 
+#define a window function in each bin
+#it can be a Gaussian width sigma (in h Mpc^{-1}) that gives |W(k)|^2 \propto exp[- k^2/sigma^2 ] (note: this sigma is different from sigma_W in 1201.5955 by a factor of sqrt(2))
+#or it can be the name of a file that contains two columns:  k [h Mpc^{-1}]  and  |W(k)| (not squared).
+#if window# is not specified; kmin will be used as the Gaussian width.
+window1 = 3.3e-3
+window2 = 2.9e-3
+window3 = 2.7e-3
+window4 = 2.6e-3
+window5 = 2.5e-3
+window6 = 2.4e-3
+window7 = 2.4e-3
+window8 = fisher_inis/test_window.txt
 
 
 
