--- a/forecast/fisher_inis/fisher_modified_pk.ini
+++ b/forecast/fisher_inis/fisher_modified_pk.ini
@@ -46,5 +46,5 @@ param[cmb_A_noise] = 1. -0.01 0.01 0.01
 
 n_observations = 2
 observation1 =  fisher_inis/params_planck.ini
-observation2 =  fisher_inis/params_mpk.ini
+observation2 =  fisher_inis/params_mpk_with_windows.ini
 #observation3 =  fisher_inis/params_sn.ini
