--- a/forecast/fisher_inis/fisher_lcdm.ini
+++ b/forecast/fisher_inis/fisher_lcdm.ini
@@ -29,7 +29,7 @@ param[mpk_b0_7] = 1.491 -0.03 0.03
 param[mpk_b0_8] = 1.568 -0.04 0.04
 param[cmb_A_noise] = 1. -0.01 0.01 0.01
 
-n_observations = 1
+n_observations = 2
 observation1 =  fisher_inis/params_planck.ini
-#observation2 =  fisher_inis/params_mpk.ini
+observation2 =  fisher_inis/params_mpk.ini
 #observation3 =  fisher_inis/params_sn.ini
