fix MPK data set bug; thanks Mohammad Hossein Namjoo

--- a/forecast/fisher_inis/fisher_lcdm.ini
+++ b/forecast/fisher_inis/fisher_lcdm.ini
@@ -1,9 +1,9 @@
 #number of cosmological parameters + nuisance parameters
 n_params = 18
 #name of parameters
-param_names = ombh2 omch2 tau theta logA ns nrun sn_absolute_m mpk_sigma_g mpk_b0_1 mpk_b0_2 mpk_b0_3 mpk_b0_4 mpk_b0_5 mpk_b0_6 mpk_b0_7 mpk_b0_8 cmb_A_noise
+param_names = ombh2 omch2 tau h logA ns nrun sn_absolute_m mpk_sigma_g mpk_b0_1 mpk_b0_2 mpk_b0_3 mpk_b0_4 mpk_b0_5 mpk_b0_6 mpk_b0_7 mpk_b0_8 cmb_A_noise
 #slow parameters (will change cosmological background or perturbations)
-params_slow = ombh2 omch2 tau theta 
+params_slow = ombh2 omch2 tau h
 #fast parameters (will chagne primordial power spectrum)
 params_fast = logA ns nrun
 #output root; the output file will be ROOT_cov.txt, ROOT_fisher.txt and ROOT_std.txt
@@ -13,7 +13,8 @@ root = fisher_out/lcdm_Planck
 param[ombh2] = 0.022 0.0003 -0.0003 0.002
 param[omch2] = 0.11 0.001 -0.001
 param[tau] = 0.07 0.005 -0.005 
-param[theta] = 1.04 0.001 -0.001
+param[h] = 0.7 0.003 -0.003
+#param[theta] = 1.04 0.001 -0.001
 param[logA] = 3.1 0.02 -0.02
 param[ns] = 0.96  0.005 -0.005
 param[nrun] = 0.  0.005 -0.005
