--- a/forecast/fisher_inis/params_sn.ini
+++ b/forecast/fisher_inis/params_sn.ini
@@ -4,7 +4,7 @@ name = SN_WFIRSTlike
 #Future WFIRST, parameters from arXiv 1503.03757
 n_obs = 17
 
-params = ombh2 omch2 theta de_w sn_absolute_m
+params = ombh2 omch2 theta h de_w de_wa sn_absolute_m
 
 
 z = 0.1 0.2 0.3 0.4 0.5 0.6 0.7 0.8 0.9 1. 1.1 1.2 1.3 1.4 1.5 1.6 1.7
