--- a/forecast/fisher_inis/fisher_eftDE.ini
+++ b/forecast/fisher_inis/fisher_eftDE.ini
@@ -7,7 +7,7 @@ params_slow = ombh2 omch2 tau theta de_w de_alpha_K0 de_alpha_M0 de_alpha_B0 de_
 #fast parameters (will chagne primordial power spectrum)
 params_fast = logA ns
 #output root; the output file will be ROOT_cov.txt, ROOT_fisher.txt and ROOT_std.txt
-root = fisher_out/wBKM_CMB_LSS_SN
+root = fisher_out/wBKM_Planck_LSS_SN
 
 ## fiducial value; trial step1; trial step2; Gaussian piror width
 param[ombh2] = 0.022 0.0003 -0.0003 0.002
@@ -17,7 +17,7 @@ param[theta] = 1.04 0.001 -0.001
 param[logA] = 3.1 0.02 -0.02
 param[ns] = 0.96  0.005 -0.005
 param[de_w] = -1. 0.015 0.03
-param[de_alpha_K0] = 0.1
+param[de_alpha_K0] = 0.1 -0.05 0.05
 param[de_alpha_M0] = 0. 0.15 0.3
 param[de_alpha_B0] = 0. -0.1 -0.15
 param[de_alpha_H0] = 0. 
@@ -35,6 +35,6 @@ param[mpk_b0_8] = 1.568 -0.04 0.04
 param[cmb_A_noise] = 1. -0.01 0.01 0.01
 
 n_observations = 3
-observation1 =  fisher_inis/params_cmb.ini
+observation1 =  fisher_inis/params_planck.ini
 observation2 =  fisher_inis/params_mpk.ini
 observation3 =  fisher_inis/params_sn.ini
