disable (incorrect) compiler optimization by resetting cosmology for each fisher step

--- a/forecast/fisher_inis/fisher_lcdm.ini
+++ b/forecast/fisher_inis/fisher_lcdm.ini
@@ -10,10 +10,10 @@ params_fast = logA ns nrun
 root = fisher_out/lcdm_Planck
 
 ## fiducial value; [trial step1; trial step2; Gaussian piror width]
-param[ombh2] = 0.022 0.0003 -0.0003 0.002
-param[omch2] = 0.11 0.001 -0.001
-param[tau] = 0.07 0.005 -0.005 
-param[h] = 0.7 0.003 -0.003
+param[ombh2] = 0.022 
+param[omch2] = 0.11 
+param[tau] = 0.07 -0.005 0.005
+param[h] = 0.7 
 #param[theta] = 1.04 0.001 -0.001
 param[logA] = 3.1 0.02 -0.02
 param[ns] = 0.96  0.005 -0.005
@@ -30,7 +30,7 @@ param[mpk_b0_7] = 1.491 -0.03 0.03
 param[mpk_b0_8] = 1.568 -0.04 0.04
 param[cmb_A_noise] = 1. -0.01 0.01 0.01
 
-n_observations = 2
-observation1 =  fisher_inis/params_planck.ini
-observation2 =  fisher_inis/params_mpk.ini
+n_observations = 1
+observation2 =  fisher_inis/params_planck.ini
+observation1 =  fisher_inis/params_mpk.ini
 #observation3 =  fisher_inis/params_sn.ini
