problem with compiler optimization bug fixed: thank Mohammad Hossein for catching the bug!

--- a/forecast/fisher_inis/fisher_lcdm.ini
+++ b/forecast/fisher_inis/fisher_lcdm.ini
@@ -2,18 +2,22 @@
 n_params = 18
 #name of parameters
 param_names = ombh2 omch2 tau h logA ns nrun sn_absolute_m mpk_sigma_g mpk_b0_1 mpk_b0_2 mpk_b0_3 mpk_b0_4 mpk_b0_5 mpk_b0_6 mpk_b0_7 mpk_b0_8 cmb_A_noise
+#param_names = ombh2 omch2 tau theta logA ns nrun sn_absolute_m mpk_sigma_g mpk_b0_1 mpk_b0_2 mpk_b0_3 mpk_b0_4 mpk_b0_5 mpk_b0_6 mpk_b0_7 mpk_b0_8 cmb_A_noise
+
 #slow parameters (will change cosmological background or perturbations)
 params_slow = ombh2 omch2 tau h
+#params_slow = ombh2 omch2 tau theta
+
 #fast parameters (will chagne primordial power spectrum)
 params_fast = logA ns nrun
 #output root; the output file will be ROOT_cov.txt, ROOT_fisher.txt and ROOT_std.txt
 root = fisher_out/lcdm_Planck
 
 ## fiducial value; [trial step1; trial step2; Gaussian piror width]
-param[ombh2] = 0.022 
-param[omch2] = 0.11 
+param[ombh2] = 0.022 -0.0002 0.0002 
+param[omch2] = 0.11 0.002 -0.002
 param[tau] = 0.07 -0.005 0.005
-param[h] = 0.7 
+param[h] = 0.7 0.003 -0.003
 #param[theta] = 1.04 0.001 -0.001
 param[logA] = 3.1 0.02 -0.02
 param[ns] = 0.96  0.005 -0.005
@@ -30,7 +34,7 @@ param[mpk_b0_7] = 1.491 -0.03 0.03
 param[mpk_b0_8] = 1.568 -0.04 0.04
 param[cmb_A_noise] = 1. -0.01 0.01 0.01
 
-n_observations = 1
-observation2 =  fisher_inis/params_planck.ini
-observation1 =  fisher_inis/params_mpk.ini
-#observation3 =  fisher_inis/params_sn.ini
+n_observations = 3
+observation1 =  fisher_inis/params_planck.ini
+observation2 =  fisher_inis/params_mpk.ini
+observation3 =  fisher_inis/params_sn.ini
