fix window width not read bug; thanks Mohammad Hossein!

--- a/forecast/fisher_inis/fisher_lcdm.ini
+++ b/forecast/fisher_inis/fisher_lcdm.ini
@@ -11,18 +11,18 @@ params_slow = ombh2 omch2 tau h
 #fast parameters (will chagne primordial power spectrum)
 params_fast = logA ns nrun
 #output root; the output file will be ROOT_cov.txt, ROOT_fisher.txt and ROOT_std.txt
-root = fisher_out/lcdm_Planck
+root = fisher_out/lcdm_Planck_MPK_SN
 
 ## fiducial value; [trial step1; trial step2; Gaussian piror width]
-param[ombh2] = 0.022 -0.0002 0.0002 
+param[ombh2] = 0.022 -0.0002 0.0002
 param[omch2] = 0.11 0.002 -0.002
-param[tau] = 0.07 -0.005 0.005
-param[h] = 0.7 0.003 -0.003
+param[tau] = 0.07 -0.003 0.003
+param[h] = 0.7 0.003 -0.003 0.03
 #param[theta] = 1.04 0.001 -0.001
 param[logA] = 3.1 0.02 -0.02
 param[ns] = 0.96  0.005 -0.005
-param[nrun] = 0.  0.005 -0.005
-param[sn_absolute_m] = 19. -0.02 0.02 0.1
+param[nrun] = 0. 
+param[sn_absolute_m] = 19. -0.03 0.03 0.1
 param[mpk_sigma_g] = 400.  -10.  10.  200.
 param[mpk_b0_1] = 1.053 -0.02 0.02
 param[mpk_b0_2] = 1.125 -0.02 0.02
@@ -32,7 +32,7 @@ param[mpk_b0_5] = 1.292 -0.03 0.03
 param[mpk_b0_6] = 1.497 -0.03 0.03
 param[mpk_b0_7] = 1.491 -0.03 0.03
 param[mpk_b0_8] = 1.568 -0.04 0.04
-param[cmb_A_noise] = 1. -0.01 0.01 0.01
+param[cmb_A_noise] = 1. 0.003 -0.003 0.01
 
 n_observations = 3
 observation1 =  fisher_inis/params_planck.ini
