--- a/forecast/fisher_inis/params_mpk_with_windows.ini
+++ b/forecast/fisher_inis/params_mpk_with_windows.ini
@@ -43,3 +43,6 @@ window8 = fisher_inis/test_window.txt
 
 # uncertainty in z = sigma_z (1+z); for photo z measurements sigma_z is typically 0.03-0.05; for spectr-z  sigma_z is typically ~0.001
 sigma_z = 0.001
+
+#If you want to have the matter power spectra saved in ROOT_zbin1.dat, ROOT_zbin2.dat, ..., define ROOT below. The saved files contain 3 columns: k [h Mpc^{-1}], P(k) [ h^{-3} Mpc^3],  smeared P(k)  [ h^{-3} Mpc^3],
+#mpk_output_root = fisher_out/savedmpk
