save matter power spectra to files

--- a/forecast/fisher_inis/params_mpk_with_windows.ini
+++ b/forecast/fisher_inis/params_mpk_with_windows.ini
@@ -45,4 +45,4 @@ window8 = fisher_inis/test_window.txt
 sigma_z = 0.001
 
 #If you want to have the matter power spectra saved in ROOT_zbin1.dat, ROOT_zbin2.dat, ..., define ROOT below. The saved files contain 3 columns: k [h Mpc^{-1}], P(k) [ h^{-3} Mpc^3],  smeared P(k)  [ h^{-3} Mpc^3],
-#mpk_output_root = fisher_out/savedmpk
+mpk_output_root = fisher_out/savedmpk
