--- a/forecast/fisher_inis/params_mpk_with_user_defined_windows.ini
+++ b/forecast/fisher_inis/params_mpk_with_user_defined_windows.ini
@@ -14,7 +14,11 @@ fsky = 0.4
 n_z = 8
 n_k = 16
 n_mu = 16
-#above k_linear sampling do uniform sampling in k;
+
+#well above k_linear sampling do uniform sampling in k; 
+#well below k_linear_sampling do uniform ln k; 
+#around k_linear_sampling there is a smooth transition
+#unit h Mpc^{-1}
 k_linear_sampling = 0.03
 
 #redshift bins
