--- a/forecast/fisher_inis/fisher_modified_pk.ini
+++ b/forecast/fisher_inis/fisher_modified_pk.ini
@@ -1,8 +1,8 @@
 #number of cosmological parameters + nuisance parameters
-n_params = 26
+n_params = 25
 
 #name of parameters
-param_names = ombh2 omch2 tau theta user_pp1 user_pp2 user_pp3 user_pp4 user_pp5 user_pp6 user_pp6 user_pp7 user_pp8 user_pp9 user_pp10 sn_absolute_m mpk_sigma_g mpk_b0_1 mpk_b0_2 mpk_b0_3 mpk_b0_4 mpk_b0_5 mpk_b0_6 mpk_b0_7 mpk_b0_8 cmb_A_noise
+param_names = ombh2 omch2 tau theta user_pp1 user_pp2 user_pp3 user_pp4 user_pp5 user_pp6 user_pp7 user_pp8 user_pp9 user_pp10 sn_absolute_m mpk_sigma_g mpk_b0_1 mpk_b0_2 mpk_b0_3 mpk_b0_4 mpk_b0_5 mpk_b0_6 mpk_b0_7 mpk_b0_8 cmb_A_noise
 
 #slow parameters (will change cosmological background or perturbations)
 params_slow = ombh2 omch2 tau theta
