add MAP2CLS and INP applications

--- a/forecast/fisher_inis/fisher_lcdm.ini
+++ b/forecast/fisher_inis/fisher_lcdm.ini
@@ -23,7 +23,7 @@ param[logA] = 3.1 0.02 -0.02
 param[ns] = 0.96  0.005 -0.005
 param[nrun] = 0. 
 param[sn_absolute_m] = 19. -0.03 0.03 0.1
-param[mpk_sigma_g] = 400.  -10.  10.  200.
+param[mpk_sigma_g] = 400.  -20.  20.  200.
 param[mpk_b0_1] = 1.053 -0.02 0.02
 param[mpk_b0_2] = 1.125 -0.02 0.02
 param[mpk_b0_3] = 1.126 -0.02 0.02
@@ -36,5 +36,5 @@ param[cmb_A_noise] = 1. 0.003 -0.003 0.01
 
 n_observations = 3
 observation1 =  fisher_inis/params_planck.ini
-observation2 =  fisher_inis/params_mpk.ini
+observation2 =  fisher_inis/params_mpk_LSST_with_window.ini
 observation3 =  fisher_inis/params_sn.ini
