--- a/mapio/spider.ini
+++ b/mapio/spider.ini
@@ -1,7 +1,9 @@
-#action: DO_MASK; DO_KERNEL; DO_NOISE; DO_SIGNAL; DO_DATA; DO_QB; DO_MUB;
+#action: DO_MASK; DO_KERNEL; DO_NOISE; DO_SIGNAL; DO_DATA; DO_QB; DO_MUB; 
 # DO_ALL =  DO_KERNEL + DO_NOISE + DO_SIGNAL + DO_DATA + DO_QB + DO_MUB;
 # DO_ALL_BUT_KERNEL = DO_NOISE + DO_SIGNAL +  DO_DATA + DO_QB + DO_MUB;
-action = DO_ALL_BUT_KERNEL
+#if you are running it for the first time, you do DO_MASK first then DO_ALL.
+#in case of failure of DO_QB or DO_MUB, you can reduce the number of ell bins and rerun DO_QB and DO_MUB. (no need to rerun other steps).
+action = DO_MUB
 #DO_ALL_BUT_KERNEL
 
 # I, QU, or IQU
@@ -18,7 +20,7 @@ lmax_data = 300
 #lmin used for data analysis
 lmin_data = 20
 #number of ell bins (the binning is automatically done)
-num_ell_bins = 30
+num_ell_bins = 10
 
 #number of channels
 num_channels = 3
@@ -35,11 +37,15 @@ mub_output_root = spider/mub
 cl_output_root = spider/cl
 
 #mask root; the i-th mask file will be ROOT_i.fits
+## hits cut
+hits_root = spider/data/proj
+hits_cut = 2.
+##additional cut for polarization
 cond_root = spider/data/cond
 cond_cut = 1.
-proj_root = spider/data/proj
-proj_cut = 0.1
+
 mask_root = spider/data/mask
+smooth_mask_edge = T
 lmax_mask = 300
 
 #map root; the i-th map file will be ROOT_i.fits
