--- a/mapio/Makefile
+++ b/mapio/Makefile
@@ -8,7 +8,7 @@ include ../configure.in
 include ../compile_rules.in
 
 LIB = libcoopmapio.a
-OBJ = sphere.o stacking_obj.o coop_fitsio.o healgeo.o fitswrap.o  zeta3d.o
+OBJ = sphere.o stacking_obj.o coop_fitsio.o healutils.o fitswrap.o  zeta3d.o
 
 default: all
 
@@ -154,7 +154,7 @@ map_by_products.o: $(LIB) $(OBJ)
 
 rotate_map.o:	$(LIB) $(OBJ)
 
-healgeo.o: stacking_obj.o
+healutils.o: stacking_obj.o
 
 te2z.o: $(LIB) $(OBJ)
 
