add simple 2d function

--- a/nonlinear/Makefile
+++ b/nonlinear/Makefile
@@ -22,6 +22,9 @@ FNL: $(OBJ) testfnl.o $(FIRSTORDER)/libcoopfirstorder.a
 Test: $(OBJ) test.o $(FIRSTORDER)/libcoopfirstorder.a
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) test.o $(LINK)
 
+Col: $(OBJ) testcollapse.o $(FIRSTORDER)/libcoopfirstorder.a
+	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) testcollapse.o $(LINK)
+
 clean:
 	rm -f *.o *.*~ *.mod \#* *.a Makefile~ 
 
