ellipse collapse accurate version

--- a/nonlinear/Makefile
+++ b/nonlinear/Makefile
@@ -11,7 +11,7 @@ include ../compile_rules.in
 LIB = libcoopnonlinear.a
 OBJ = nonlinear.o ellipse_collapse.o
 
-default: $(LIB)
+default: $(LIB) GetZ1 Solve TabZ1
 
 $(LIB):	$(OBJ) 
 	ar -r $@ $?
@@ -29,12 +29,17 @@ TestSimp: $(OBJ) testsimple.o $(FIRSTORDER)/libcoopfirstorder.a
 Solve: $(OBJ) solve_collapse.o $(FIRSTORDER)/libcoopfirstorder.a
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) solve_collapse.o $(LINK)
 
+
+TabZ1: $(OBJ) make_zvir1_table.o $(FIRSTORDER)/libcoopfirstorder.a
+	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) make_zvir1_table.o $(LINK)
+
+
 GetZ1: $(OBJ) get_zvir1.o $(FIRSTORDER)/libcoopfirstorder.a
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) get_zvir1.o $(LINK)
 
 
 clean:
-	rm -f *.o *.*~ *.mod \#* *.a Makefile~ 
+	rm -f *.o *.*~ *.mod \#* *.a Makefile~ GetZ1 Solve TestSimp Test FNL TabZ1
 
 
 test.o: $(OBJ)
