--- a/forecast/fisher_inis/fisher_lcdm.ini
+++ b/forecast/fisher_inis/fisher_lcdm.ini
@@ -1,40 +1,43 @@
 #number of cosmological parameters + nuisance parameters
-n_params = 18
+n_params = 22
 #name of parameters
-param_names = ombh2 omch2 tau h logA ns nrun sn_absolute_m mpk_sigma_g mpk_b0_1 mpk_b0_2 mpk_b0_3 mpk_b0_4 mpk_b0_5 mpk_b0_6 mpk_b0_7 mpk_b0_8 cmb_A_noise
+param_names = ombh2 omch2 tau theta logA ns nrun sn_absolute_m mpk_sigma_g mpk_b0_1 mpk_b0_2 mpk_b0_3 mpk_b0_4 mpk_b0_5 mpk_b0_6 mpk_b0_7 mpk_b0_8 cmb_A_noise cmb_n_noise cmb_A_noise_pol cmb_n_noise_pol cmb_A_tSZ
 #param_names = ombh2 omch2 tau theta logA ns nrun sn_absolute_m mpk_sigma_g mpk_b0_1 mpk_b0_2 mpk_b0_3 mpk_b0_4 mpk_b0_5 mpk_b0_6 mpk_b0_7 mpk_b0_8 cmb_A_noise
 
 #slow parameters (will change cosmological background or perturbations)
-params_slow = ombh2 omch2 tau h
+params_slow = ombh2 omch2 tau theta
 #params_slow = ombh2 omch2 tau theta
 
 #fast parameters (will chagne primordial power spectrum)
 params_fast = logA ns nrun
 #output root; the output file will be ROOT_cov.txt, ROOT_fisher.txt and ROOT_std.txt
-root = fisher_out/lcdm_Planck_MPK_SN
+root = fisher_out/lcdm_Planck_pess
 
 ## fiducial value; [trial step1; trial step2; Gaussian piror width]
 param[ombh2] = 0.022 -0.0002 0.0002
-param[omch2] = 0.11 0.002 -0.002
-param[tau] = 0.07 -0.003 0.003
-param[h] = 0.7 0.003 -0.003 0.03
-#param[theta] = 1.04 0.001 -0.001
-param[logA] = 3.1 0.02 -0.02
-param[ns] = 0.96  0.005 -0.005
+param[omch2] = 0.12 0.002 -0.002
+param[tau] = 0.082 -0.02 0.02 0.03
+param[theta] = 1.04 0.0005
+param[logA] = 3.1 0.03
+param[ns] = 0.97  0.005 
 param[nrun] = 0. 
-param[sn_absolute_m] = 19. -0.03 0.03 0.1
-param[mpk_sigma_g] = 400.  -20.  20.  200.
-param[mpk_b0_1] = 1.053 -0.02 0.02
-param[mpk_b0_2] = 1.125 -0.02 0.02
-param[mpk_b0_3] = 1.126 -0.02 0.02
-param[mpk_b0_4] = 1.243 -0.03 0.03
-param[mpk_b0_5] = 1.292 -0.03 0.03
-param[mpk_b0_6] = 1.497 -0.03 0.03
-param[mpk_b0_7] = 1.491 -0.03 0.03
-param[mpk_b0_8] = 1.568 -0.04 0.04
+param[sn_absolute_m] = 19.
+param[mpk_sigma_g] = 400. 
+param[mpk_b0_1] = 1.053 
+param[mpk_b0_2] = 1.125
+param[mpk_b0_3] = 1.126
+param[mpk_b0_4] = 1.243
+param[mpk_b0_5] = 1.292
+param[mpk_b0_6] = 1.497
+param[mpk_b0_7] = 1.491
+param[mpk_b0_8] = 1.568
 param[cmb_A_noise] = 1. 0.003 -0.003 0.01
+param[cmb_n_noise] = 0. 0.003 -0.003 0.01
+param[cmb_A_noise_pol] = 1. 0.003 -0.003 0.01
+param[cmb_n_noise_pol] = 0. 0.003 -0.003 0.01
+param[cmb_A_tSZ] = 1.d0 0.3 
 
-n_observations = 3
-observation1 =  fisher_inis/params_planck.ini
+n_observations = 1
+observation1 =  fisher_inis/params_planck_conservative.ini
 observation2 =  fisher_inis/params_mpk_LSST_with_window.ini
 observation3 =  fisher_inis/params_sn.ini
