--- a/forecast/fisher_inis/params_planck_conservative.ini
+++ b/forecast/fisher_inis/params_planck_conservative.ini
@@ -1,5 +1,5 @@
 #CMB mock data
-genre = CMB_TE
+genre = CMB_T
 name = CMB_PlanckLike
 #this number should be max(lmax, lmax_pol) - min(lmin, lmin_pol) + 1
 n_obs = 2499
@@ -10,13 +10,13 @@ params = ombh2 omch2 theta h tau logA ns nrun r nt user_pp1 user_pp2 user_pp3 us
 lmin = 2
 lmax = 2500
 #sky coverage for temperature data (0-1)
-fsky = 0.75
+fsky = 0.7
 
 #polarization l cutoffs, if not specified use lmin_pol = lmin, lmax_pol = lmax
 lmin_pol = 30
 lmax_pol = 1500
 #sky coverage for polarization data (0-1)
-fsky_pol = 0.75
+fsky_pol = 0.6
 #residual of thermal dust emission (0-1)
 foreground_dust_residual = 0.05
 #thermal SZ template; must be in the same directory of this file
