--- a/forecast/fisher_inis/fisher_lcdm.ini
+++ b/forecast/fisher_inis/fisher_lcdm.ini
@@ -35,7 +35,7 @@ param[cmb_A_noise] = 1. 0.003 -0.003 0.01
 param[cmb_n_noise] = 0. 0.003 -0.003 0.01
 param[cmb_A_noise_pol] = 1. 0.003 -0.003 0.01
 param[cmb_n_noise_pol] = 0. 0.003 -0.003 0.01
-param[cmb_A_tSZ] = 1.d0 0.3  -0.3 0.3
+param[cmb_A_tSZ] = 1.d0 
 
 n_observations = 1
 observation1 =  fisher_inis/params_planck_conservative.ini
