--- a/forecast/fisher_inis/fisher_lcdm.ini
+++ b/forecast/fisher_inis/fisher_lcdm.ini
@@ -16,7 +16,7 @@ root = fisher_out/lcdm_Planck_pess
 ## fiducial value; [trial step1; trial step2; Gaussian piror width]
 param[ombh2] = 0.022 -0.0002 0.0002
 param[omch2] = 0.12 0.002 -0.002
-param[tau] = 0.082 -0.02 0.02 0.03
+param[tau] = 0.082 -0.02 0.02 0.02
 param[theta] = 1.04 0.0005
 param[logA] = 3.1 0.03
 param[ns] = 0.97  0.005 
@@ -35,7 +35,7 @@ param[cmb_A_noise] = 1. 0.003 -0.003 0.01
 param[cmb_n_noise] = 0. 0.003 -0.003 0.01
 param[cmb_A_noise_pol] = 1. 0.003 -0.003 0.01
 param[cmb_n_noise_pol] = 0. 0.003 -0.003 0.01
-param[cmb_A_tSZ] = 1.d0 
+param[cmb_A_tSZ] = 1.d0  0.5 -0.5  1.
 
 n_observations = 1
 observation1 =  fisher_inis/params_planck_conservative.ini
