--- a/forecast/fisher_inis/fisher_eftDE.ini
+++ b/forecast/fisher_inis/fisher_eftDE.ini
@@ -1,7 +1,7 @@
 #number of cosmological parameters + nuisance parameters
-n_params = 23
+n_params = 27
 #name of parameters
-param_names = ombh2 omch2 tau theta logA ns de_w de_alpha_K0 de_alpha_M0 de_alpha_B0 de_alpha_H0 de_alpha_T0 sn_absolute_m mpk_sigma_g mpk_b0_1 mpk_b0_2 mpk_b0_3 mpk_b0_4 mpk_b0_5 mpk_b0_6 mpk_b0_7 mpk_b0_8 cmb_A_noise
+param_names = ombh2 omch2 tau theta logA ns de_w de_alpha_K0 de_alpha_M0 de_alpha_B0 de_alpha_H0 de_alpha_T0 sn_absolute_m mpk_sigma_g mpk_b0_1 mpk_b0_2 mpk_b0_3 mpk_b0_4 mpk_b0_5 mpk_b0_6 mpk_b0_7 mpk_b0_8 cmb_A_noise  cmb_n_noise cmb_A_noise_pol cmb_n_noise_pol cmb_A_tSZ
 #slow parameters (will change cosmological background or perturbations)
 params_slow = ombh2 omch2 tau theta de_w de_alpha_K0 de_alpha_M0 de_alpha_B0 de_alpha_H0
 #fast parameters (will chagne primordial power spectrum)
@@ -33,6 +33,10 @@ param[mpk_b0_6] = 1.497 -0.03 0.03
 param[mpk_b0_7] = 1.491 -0.03 0.03
 param[mpk_b0_8] = 1.568 -0.04 0.04
 param[cmb_A_noise] = 1. -0.01 0.01 0.01
+param[cmb_n_noise] = 0. 0.003 -0.003 0.01
+param[cmb_A_noise_pol] = 1. 0.003 -0.003 0.01
+param[cmb_n_noise_pol] = 0. 0.003 -0.003 0.01
+param[cmb_A_tSZ] = 1.d0  0.5 -0.5  1.
 
 n_observations = 3
 observation1 =  fisher_inis/params_planck.ini
