--- a/forecast/fisher_inis/params_planck.ini
+++ b/forecast/fisher_inis/params_planck.ini
@@ -1,4 +1,6 @@
-#CMB mock data
+#CMB mock data;
+# here we are using fsky_pol = 0.4; 
+# fsky_pol = 0.2 more or less matches Planck 2015 release.
 genre = CMB_TE
 name = CMB_PlanckLike
 #this number should be max(lmax, lmax_pol) - min(lmin, lmin_pol) + 1
@@ -10,15 +12,15 @@ params = ombh2 omch2 theta h tau logA ns nrun r nt user_pp1 user_pp2 user_pp3 us
 lmin = 2
 lmax = 2500
 #sky coverage for temperature data (0-1)
-fsky = 0.7
+fsky = 0.65
 
 #polarization l cutoffs, if not specified use lmin_pol = lmin, lmax_pol = lmax
 lmin_pol = 30
-lmax_pol = 800
+lmax_pol = 2000
 #sky coverage for polarization data (0-1)
-fsky_pol = 0.3
+fsky_pol = 0.4
 #residual of thermal dust emission (0-1)
-foreground_dust_residual = 0.1
+foreground_dust_residual = 0.05
 #thermal SZ template; must be in the same directory of this file
 tSZ_template = tSZ_template.dat
 
@@ -28,24 +30,24 @@ tSZ_template = tSZ_template.dat
 n_channels = 3
 
 #frequencies in GHz
-frequency_channel3 = 70.
-frequency_channel2 = 100.
 frequency_channel1 = 143.
+frequency_channel2 = 100.
+frequency_channel3 = 70.
 
 #beam FWHM in arcmin
-beam_fwhm_channel3 = 14.
-beam_fwhm_channel2 = 10.
 beam_fwhm_channel1 = 7.1
-
+beam_fwhm_channel2 = 10.
+beam_fwhm_channel3 = 14.
 
 
 #detector sensitivity in unit muK s^{1/2}
-i_sensitivity_channel3 = 318.
-i_sensitivity_channel2 = 121.
 i_sensitivity_channel1 = 75.2
-pol_sensitivity_channel3 = 450.
-pol_sensitivity_channel2 = 172.
+i_sensitivity_channel2 = 121.
+i_sensitivity_channel3 = 318.
+
 pol_sensitivity_channel1 = 106.
+pol_sensitivity_channel2 = 172.
+pol_sensitivity_channel3 = 450.
 
 #integration time in unit of years
 obs_yr = 2.5
