--- a/forecast/fisher_inis/fisher_lcdm.ini
+++ b/forecast/fisher_inis/fisher_lcdm.ini
@@ -14,23 +14,23 @@ params_fast = logA ns nrun
 root = fisher_out/lcdm_Planck_pess
 
 ## fiducial value; [trial step1; trial step2; Gaussian piror width]
-param[ombh2] = 0.022 -0.0002 0.0002
-param[omch2] = 0.12 0.002 -0.002
-param[tau] = 0.082 -0.02 0.02 0.02
-param[theta] = 1.04 0.0005
+param[ombh2] = 0.022 
+param[omch2] = 0.12 
+param[tau] = 0.082
+param[theta] = 1.04 
 param[logA] = 3.1 0.03
 param[ns] = 0.97  0.005 
 param[nrun] = 0. 
-param[sn_absolute_m] = 19.
-param[mpk_sigma_g] = 400. 
-param[mpk_b0_1] = 1.053 
-param[mpk_b0_2] = 1.125
-param[mpk_b0_3] = 1.126
-param[mpk_b0_4] = 1.243
-param[mpk_b0_5] = 1.292
-param[mpk_b0_6] = 1.497
-param[mpk_b0_7] = 1.491
-param[mpk_b0_8] = 1.568
+param[sn_absolute_m] = 19. 
+param[mpk_sigma_g] = 400. 30  
+param[mpk_b0_1] = 1.053  0.01
+param[mpk_b0_2] = 1.125 0.01
+param[mpk_b0_3] = 1.126 0.01
+param[mpk_b0_4] = 1.243 0.01
+param[mpk_b0_5] = 1.292 0.01
+param[mpk_b0_6] = 1.497 0.01
+param[mpk_b0_7] = 1.491 0.01
+param[mpk_b0_8] = 1.568 
 param[cmb_A_noise] = 1. 0.003 -0.003 0.01
 param[cmb_n_noise] = 0. 0.003 -0.003 0.01
 param[cmb_A_noise_pol] = 1. 0.003 -0.003 0.01
@@ -38,6 +38,6 @@ param[cmb_n_noise_pol] = 0. 0.003 -0.003 0.01
 param[cmb_A_tSZ] = 1.d0  0.5 -0.5  1.
 
 n_observations = 1
-observation1 =  fisher_inis/params_planck_conservative.ini
-observation2 =  fisher_inis/params_mpk_LSST_with_window.ini
+observation2 =  fisher_inis/params_planck_conservative.ini
+observation1 =  fisher_inis/params_mpk_LSST_with_window.ini
 observation3 =  fisher_inis/params_sn.ini
